# gilot

./: .cursorrules  .gitignore  LICENSE  README.md  app.py  gilot.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
sample/: Makefile  sample.ipynb  test.ipynb
src/gilot/: __init__.py  app.py  core.py  filetracker.py  hotgraph.py  hotspot.py  log.py  plot.py  plotter.py
tests/: conftest.py  test.ipynb  test_app.py  test_core.py
