[tool.poetry]
name = "gilot"
version = "0.2.6"
description = "a git log visual analyzer"
readme = "README.md"
repository = "https://github.com/hirokidaichi/gilot"
authors = ["hirokidaichi <hirokidaichi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.11,<3.11"

numpy = "^1.21.2"
pandas = "^1.3.2"
GitPython = "^3.1.20"
DateTime = "^4.3"
seaborn = "^0.11.2"
argparse = "^1.4.0"
matplotlib = "^3.4.3"
python-Levenshtein = "^0.12.2"
pyfpgrowth = "^1.0"
timeout-decorator = "^0.5.0"
networkx = "^2.6.2"
python-louvain = "^0.15"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
autopep8 = "^1.5.7"

[tool.poetry.scripts]
gilot = "gilot.app:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

