[project]
name = "gilot"
version = "0.2.7"
description = "a git log visual analyzer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "datetime>=5.5",
    "gitpython>=3.1.44",
    "matplotlib>=3.7.5,<3.8.0",
    "networkx>=3.1",
    "numpy>=1.26.0",
    "pandas>=2.0.3",
    "pyfpgrowth>=1.0",
    "python-louvain>=0.16",
    "scipy>=1.10.1",
    "seaborn>=0.12.0,<0.13.0",
    "timeout-decorator>=0.5.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.1",
    "flake8>=7.1.1",
    "jupyter>=1.1.1",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
]

[project.scripts]
gilot = "gilot.app:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["gilot"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
